@@ -312,7 +312,7 @@ try:
                 data.meta = value['meta']
             else:
                 data = value
-            serialized = binascii.hexlify(w.write(data, 1, single_char_strings = single_char_strings))[16:].lower()
+            serialized = binascii.hexlify(w.write(data, 1, single_char_strings = single_char_strings, pandas = True))[16:].lower()
             assert serialized == BINARY[query].lower(), 'serialization failed: %s, expected: %s actual: %s' % (value,  BINARY[query].lower(), serialized)
             sys.stdout.write( '.' )
 
