@@ -2,7 +2,8 @@
   qPython 1.3.0 [2017.03.xx]
 ------------------------------------------------------------------------------
 
-  - Add support for Python 3.5 and 3.6. Drop support for Python 3.3.
+  - Add support for Python 3.5 and 3.6. Drop support for Python 3.3
+  - Fix: serialization of 0n in generic lists
 
 ------------------------------------------------------------------------------
   qPython 1.2.2 [2016.09.21]
